Made customization page not necessary after login but will show after registration.

--- a/phase2/app/src/main/res/layout/activity_customization.xml
+++ b/phase2/app/src/main/res/layout/activity_customization.xml
@@ -8,11 +8,11 @@
 
     <Button
         android:id="@+id/resume1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_marginTop="16dp"
+        android:background="@drawable/continue_icon"
         android:onClick="onBackToGameClicked"
-        android:text="@string/continue_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
