--- a/phase2/app/src/main/res/values/dimens.xml
+++ b/phase2/app/src/main/res/values/dimens.xml
@@ -4,4 +4,8 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="keyboard_button_width">36dp</dimen>
     <dimen name="keyboard_button_height">40dp</dimen>
+    <dimen name="menu_button_width">130dp</dimen>
+    <dimen name="menu_button_height">40dp</dimen>
+    <dimen name="theme_button_width">40dp</dimen>
+    <dimen name="theme_button_height">40dp</dimen>
 </resources>
