--- a/phase2/app/src/main/res/layout/activity_main.xml
+++ b/phase2/app/src/main/res/layout/activity_main.xml
@@ -61,7 +61,7 @@
         android:layout_height="@dimen/menu_button_height"
         android:layout_marginTop="48dp"
         android:fontFamily="@font/renner"
-        android:onClick="playReactionGame"
+        android:onClick="playGame"
         android:text="play"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.839"
@@ -132,13 +132,26 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="36dp"
-        android:layout_marginBottom="204dp"
+        android:layout_marginTop="28dp"
         android:fontFamily="@font/renner"
         android:onClick="playTileGame"
         android:text="Tile"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/button6"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button5" />
+        app:layout_constraintTop_toBottomOf="@+id/button5"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <Button
+        android:id="@+id/button6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="36dp"
+        android:layout_marginBottom="168dp"
+        android:fontFamily="@font/renner"
+        android:onClick="playReactionGame"
+        android:text="@string/reaction_game"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
         android:id="@+id/imageView5"
