--- a/phase2/app/src/main/res/layout/activity_statistics.xml
+++ b/phase2/app/src/main/res/layout/activity_statistics.xml
@@ -88,6 +88,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="92dp"
+        android:fontFamily="@font/renner"
         android:onClick="onMainMenuPressed"
         android:text="@string/main_menu_button"
         app:layout_constraintBaseline_toBaselineOf="@+id/continueButton"
@@ -99,11 +100,27 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="156dp"
         android:layout_marginEnd="96dp"
+        android:fontFamily="@font/renner"
         android:onClick="onContinuePressed"
         android:text="@string/continue_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/rankingText"
         app:layout_constraintVertical_bias="0.012" />
+
+    <Button
+        android:id="@+id/backButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:fontFamily="@font/renner"
+        android:onClick="onBackPressed"
+        android:text="back"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/continueButton"
+        app:layout_constraintVertical_bias="0.062" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
